# horoscope_bot

./: .gitignore  hello.py  manage.py  pyproject.toml
bot/: main.py  main3.py
goroskop/: asgi.py  celery.py  constants.py  settings.py  urls.py  wsgi.py
goroskop/apps/forecast/: admin.py  apps.py  models.py  serializers.py  tasks.py
goroskop/apps/forecast/migrations/: 0001_initial.py
goroskop/apps/users/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
goroskop/apps/users/migrations/: 0001_initial.py  0002_alter_user_managers_user_telegram_id_and_more.py  0003_user_language.py  0004_alter_user_first_name_alter_user_last_name.py  0005_user_allow_spam.py
utils/: horoscope_api.py  translator.py
